@@ -10,12 +10,14 @@ CHANGELOG
 * Major interface/network additions were made to allow future tools like routes calculation etc etc.
 * new utility : rule-merger.php to find similar rules and merge them
 
+* util rule-edit : new action 'resolve-zones' to do a rule resolution
 * util rule-edit : new action 'copy' to copy rules into another vsys/device-group
 * util rule-edit : service-edit and address-edit will auto-detect PANOS vs Panorama, no need to use argument 'type' anymore
 * util rule-edit : new filters : 'rule is.unused.fast' will check if a rule was not used since reboot (use cli 'show running rule-use rule-base security type unused vsys vsys1')
 * util rule-edit : new filters : src/dst 'included-in.full included-in.partial included-in.full.or.partial' and 'includes.full includes-full.or.partial includes.partial'
 * util rule-edit : new filters for app 'has' and 'has.nocase' and log profile : 'logprof is.set' 'logprof is xxx'
 * util rule-edit : new actions for services and apps
+* util rule-edit : new listActions menu
 * util service-edit and address-edit new actions: replaceByMembersAndDelete, showIP4Mapping
 * util upload-config : now supports inject xml parts direct in candidate config (see 'toXpath' option)
 * util upload-config : you can now preserve target firewall config (like its mgmt ip for example, look for 'help' to see options available).
